--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "IP What - IPv4/IPv6 Connectivity Checker",
-  "version": "1.1",
-  "description": "Check IPv4 and IPv6 connectivity by pinging configurable DNS servers",
+  "version": "1.2",
+  "description": "Check IPv4 and IPv6 connectivity with local and public IP detection",
   "permissions": [
     "storage",
     "alarms"
