Add History tab with connectivity tracking, notifications, and CSV export
Features:
- Tab navigation between Status and History views
- Store connectivity history for last 24 hours
- Visual timeline graph showing IPv4/IPv6 status over time
- Calculate and display uptime percentages
- Notifications when connectivity changes (up/down)
- Recent events log with timestamps
- Export history to CSV file
- Clear history option

Version 1.4.0

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
   "manifest_version": 3,
   "name": "IP What - IPv4/IPv6 Connectivity Checker",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Check IPv4 and IPv6 connectivity with local and public IP detection",
   "permissions": [
     "storage",
-    "alarms"
+    "alarms",
+    "notifications"
   ],
   "host_permissions": [
     "http://*/*",
