Add jitter and packet loss graphs to History tab
- Calculate jitter (latency variance) from last 10 samples
- Calculate packet loss percentage from last 20 samples
- Add jitter graph with low/medium/high color coding
- Add packet loss graph with none/low/high color coding
- Display current jitter and packet loss values
- Update CSV export to include jitter and packet loss data
- Bump version to 1.5.0

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "IP What - IPv4/IPv6 Connectivity Checker",
-  "version": "1.4.0",
-  "description": "Check IPv4 and IPv6 connectivity with local and public IP detection",
+  "version": "1.5.0",
+  "description": "Check IPv4 and IPv6 connectivity with jitter, packet loss, and historical graphs",
   "permissions": [
     "storage",
     "alarms",
