--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
   "manifest_version": 3,
   "name": "IP What - IPv4/IPv6 Connectivity Checker",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "Check IPv4 and IPv6 connectivity with jitter, packet loss, and historical graphs",
   "permissions": [
     "storage",
     "alarms",
-    "notifications"
+    "notifications",
+    "webRequest"
   ],
   "host_permissions": [
     "http://*/*",
