Narrow host permissions to specific domains only
- Remove broad http://*/* and https://*/* permissions
- Use specific domains: api.ipify.org, checkip.amazonaws.com, icanhazip.com, ifconfig.me, v6.ident.me, ipv6.icanhazip.com
- Remove webRequest permission (DNS feature was disabled)
- Update IPv6 connectivity check to use v6.ident.me instead of raw IP
- Remove unused DNS resolution code
- Update privacy policy with specific services

--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,15 @@
   "permissions": [
     "storage",
     "alarms",
-    "notifications",
-    "webRequest"
+    "notifications"
   ],
   "host_permissions": [
-    "http://*/*",
-    "https://*/*"
+    "https://api.ipify.org/*",
+    "https://checkip.amazonaws.com/*",
+    "https://icanhazip.com/*",
+    "https://ifconfig.me/*",
+    "https://v6.ident.me/*",
+    "https://ipv6.icanhazip.com/*"
   ],
   "action": {
     "default_popup": "popup.html",
